--- a/DataCollection.ipynb
+++ b/DataCollection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Data Collection for 2025 March Madness Bracket Predictor**\n",
+    "# **2025 March Madness Bracket Predictor**\n",
     "\n",
     "## 1. Data Collection\n",
     "\n",
@@ -2472,6 +2472,160 @@
     "\n",
     "\n",
     "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop rows with missing values\n",
+    "merged_df = merged_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Training Different Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Initializing and splitting Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training size: 798, Testing size: 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#Defining features(x) and target variable(y)\n",
+    "X = merged_df[['AdjO_Diff', 'AdjD_Diff', 'AdjT_Diff', 'Seed_Diff']]\n",
+    "y = merged_df['Winner']\n",
+    "\n",
+    "#Splitting the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# Print dataset sizes\n",
+    "print(f\"Training size: {len(X_train)}, Testing size: {len(X_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Training and Testing Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 0.7155\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression()\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "train_accuracy = model.score(X_train, y_train)\n",
+    "\n",
+    "print(f\"Training Accuracy: {train_accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.6700\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.59      0.42      0.49        76\n",
+      "           1       0.70      0.82      0.76       124\n",
+      "\n",
+      "    accuracy                           0.67       200\n",
+      "   macro avg       0.65      0.62      0.62       200\n",
+      "weighted avg       0.66      0.67      0.66       200\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 32  44]\n",
+      " [ 22 102]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Calculate test accuracy\n",
+    "test_accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Test Accuracy: {test_accuracy:.4f}\")\n",
+    "\n",
+    "# Print classification report (detailed metrics)\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Print confusion matrix\n",
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Training a Random Forest Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Initialize the Random Forest model\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Train the model on the training data\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Print training accuracy\n",
+    "train_accuracy_rf = rf_model.score(X_train, y_train)\n",
+    "print(f\"Training Accuracy (Random Forest): {train_accuracy_rf:.4f}\")\n"
    ]
   }
  ],
